<?xml version="1.0" encoding="utf-8"?>
<resources>		

    <string name="app_name">MedicalEC</string>
    <string name="action_settings">Settings</string>
    <string name="buttonStartText">START---SESSION</string>
    <string name="buttonStopText">STOP---SESSION</string>
    <string name="buttonEvent1Text">Event_1</string>
    <string name="buttonEvent2Text">Event_2</string>
    <string name="buttonEvent3Text">Event_3</string>

</resources>

